# rfm69-serial

./: .gitignore  LICENSE  README.md  pyproject.toml
RFM69Serial/: __init__.py  device.py  packet.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/RFM69Serial/: index.doctree
docs/_build/doctrees/autoapi/RFM69Serial/RFClient/: index.doctree
docs/_build/doctrees/autoapi/RFM69Serial/device/: index.doctree
docs/_build/doctrees/autoapi/RFM69Serial/packet/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/RFM69Serial/: index.rst.txt
docs/_build/html/_sources/autoapi/RFM69Serial/RFClient/: index.rst.txt
docs/_build/html/_sources/autoapi/RFM69Serial/device/: index.rst.txt
docs/_build/html/_sources/autoapi/RFM69Serial/packet/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/RFM69Serial/: index.html
docs/_build/html/autoapi/RFM69Serial/RFClient/: index.html
docs/_build/html/autoapi/RFM69Serial/device/: index.html
docs/_build/html/autoapi/RFM69Serial/packet/: index.html
examples/: echo_client.py  echo_server.py  ping.py
firmware/RFM69_Serial/: RFM69_Serial.ino
tests/: ftdi_serial.py  test_device.py  test_packet.py  test_serial.py
